--- a/file2.css
+++ b/file2.css
@@ -1,1 +1,185 @@
-hello
+* {
+  box-sizing: border-box;
+  padding: 0%;
+  margin: 0%;
+}
+
+body {
+  font-family: serif;
+  font-weight: 400;
+  color: rgb(255, 255, 255);
+  background-image: url(image/landingpage.jpg);
+  background-size: cover;
+
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+/* navbar styling */
+
+nav {
+  background: #000;
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
+
+  height: 5rem;
+  width: 100%;
+  padding: 0.6rem;
+  background: rgba(255, 255, 255, 0.95);
+}
+.mainmenu {
+  display: flex;
+  list-style: none;
+  position: absolute;
+  left: 35%;
+}
+.mainmenu li a {
+  text-decoration: none;
+  display: inline-block;
+  margin-top: 25%;
+  margin-left: 5rem;
+  font-size: 1rem;
+  font-weight: 400;
+  font-family: Arial, Helvetica, sans-serif;
+  color: grey;
+  transition: all 0.3s;
+}
+.openmenu {
+  font-size: 2rem;
+  margin: 20px;
+  display: none;
+  cursor: pointer;
+}
+.mainmenu.closemenu,
+.icon i {
+  font-size: 2rem;
+  display: none;
+  cursor: pointer;
+}
+.fa-facebook:hover {
+  color: beige;
+}
+.closemenu {
+  display: none;
+}
+
+.logo {
+  margin: 6px;
+  margin-top: 2%;
+  font-size: 15px;
+  cursor: pointer;
+  color: darkgray;
+}
+
+/* body text */
+.body-text {
+  position: absolute;
+  top: 25%;
+  left: 10%;
+}
+.body-text h1 {
+  display: flex;
+  font-family: serif;
+  font-weight: 400;
+  font-size: 5rem;
+}
+.body-text p {
+  display: flex;
+  font-family: sans-serif;
+  font-weight: 300;
+  font-size: 1.2rem;
+  width: 40%;
+  line-height: 1.3;
+}
+
+/* mobile */
+@media (max-width: 900px) {
+  body {
+    background-image: url(image/landingpage.jpg);
+    background-size: cover;
+
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+  }
+  .nav {
+    height: 6.5rem;
+  }
+
+  .arrow-icon {
+    display: none;
+  }
+  .logo {
+    font-size: 15px;
+    margin-top: 10%;
+    z-index: 15;
+    color: darkgray;
+  }
+  .mainmenu li {
+    margin-right: 25%;
+    margin-bottom: 20%;
+  }
+  .mainmenu {
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 10;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: rgba(255, 255, 255, 1.95);
+    transition: top 3s ease;
+    display: none;
+    margin-left: 20%;
+    opacity: 100;
+  }
+
+  /* the hamburger and x icon */
+  .mainmenu .closemenu {
+    display: block;
+    position: absolute;
+    top: 30px;
+    right: 20px;
+    font-size: 1.3rem;
+    color: grey;
+  }
+  .openmenu {
+    display: block;
+    margin-top: 5%;
+    font-size: 2rem;
+    color: darkslategrey;
+    z-index: 15;
+  }
+  .mainmenu li a:hover {
+    background: none;
+    color: darkslategrey;
+    font-size: 1.6rem;
+  }
+  .hidden {
+    display: none;
+  }
+
+  /* body text */
+  .body-text {
+    position: absolute;
+    top: 25%;
+    left: 10%;
+  }
+  .body-text h1 {
+    display: flex;
+    font-family: serif;
+    font-weight: 400;
+    font-size: 2rem;
+    width: 100%;
+  }
+  .body-text p {
+    display: flex;
+    font-family: sans-serif;
+    font-weight: 300;
+    font-size: 1.2rem;
+    width: 60%;
+    line-height: 1.3;
+  }
+}
